updated motorcycle rideout complete to run on java 11